# Events

./: .gitignore  .gitmodules  README.md  compile_eventc_for_eventpy_development.sh  setup.py
eventc/: .gitignore  CMakeLists.txt  README.md  eventList.h  eventNet.h  events.h  run_tests.sh
eventc/examples/: test_eventlist.cpp  test_user_iterator.cpp
eventc/src/: CMakeLists.txt  event.h  eventList.h  eventNet.h  eventc.h  models.h
eventc/src/dynamics/: spreading.h
eventc/src/event_policy_classes/: durationPolicies.h  indexPolicies.h  kindPolicies.h  reversePolicies.h  timeStampPolicies.h
eventc/test/: CMakeLists.txt  testAll.cpp  test_event.cpp  test_eventlist.cpp  test_models.cpp  test_shuffling.cpp  test_user_iterator.cpp
eventc/test/basictests/: CMakeLists.txt  testAll.cpp  test_eventlist.cpp  test_example.cpp  test_user_iterator.cpp
eventpy/: README.md  __init__.py  documentation.i  eventpy_module.i  features.py  wrappers.py
eventpy/data/: eventlist_small1_sdt.txt
eventpy/tests/: __init__.py  test_events.py
